# ai-simple-keyboard

./: Android.bp  CMakeLists.txt  CleanSpec.mk  OWNERS  build.gradle
common/: Android.bp
dictionaries/: sample.combined
gradle/wrapper/: gradle-wrapper.properties
java/: Android.bp  AndroidManifest.xml  lint-baseline.xml
java/res/layout/: emoji_palettes_view.xml
java/res/values-af/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-am/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-ar/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-as/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-az/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-b+sr+Latn/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-be/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-bg/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-bn/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-bs/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-ca/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-cs/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-da/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-de/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-el/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-en-rCA/: strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-talkback-descriptions.xml
java/res/values-en-rGB/: strings-action-keys.xml  strings-letter-descriptions.xml  strings.xml
java/res/values-en-rIN/: strings-appname.xml  strings-emoji-descriptions.xml
java/res/values-en-rXC/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-es/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-es-rUS/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-emoji-descriptions.xml  strings-letter-descriptions.xml  strings-talkback-descriptions.xml  strings.xml
java/res/values-et/: strings-action-keys.xml  (+6 more)
native/: CMakeLists.txt
native/dicttoolkit/: Android.bp
native/dicttoolkit/src/offdevice_intermediate_dict/: offdevice_intermediate_dict.cpp  offdevice_intermediate_dict.h  offdevice_intermediate_dict_pt_node.h
native/dicttoolkit/tests/offdevice_intermediate_dict/: offdevice_intermediate_dict_test.cpp
native/jni/: Android.bp
native/jni/src/dictionary/header/: header_policy.cpp  header_policy.h
native/jni/src/dictionary/structure/backward/v402/: ver4_patricia_trie_node_writer.cpp
native/jni/src/dictionary/structure/backward/v402/content/: probability_dict_content.cpp  probability_entry.h  terminal_position_lookup_table.cpp
native/jni/src/dictionary/structure/pt_common/: dynamic_pt_gc_event_listeners.cpp
native/jni/src/dictionary/structure/pt_common/shortcut/: shortcut_list_reading_utils.cpp
native/jni/src/dictionary/structure/v4/: ver4_patricia_trie_node_writer.cpp
native/jni/src/dictionary/structure/v4/content/: probability_entry.h  terminal_position_lookup_table.cpp
native/jni/src/dictionary/utils/: binary_dictionary_shortcut_iterator.h  trie_map.cpp
native/jni/src/suggest/core/layout/: proximity_info_state_utils.cpp  proximity_info_utils.h
native/jni/src/suggest/core/result/: suggestion_results.cpp
native/jni/tests/dictionary/utils/: format_utils_test.cpp
tests/: Android.bp  AndroidManifest.xml  AndroidTest.xml
tools/EditTextVariations/: Android.bp  AndroidManifest.xml
tools/dicttool/: Android.bp
tools/make-keyboard-text/: Android.bp
(+587 files in other folders)
